css/style.css
:root {
  /* Colors */
  --clr-shade-darker: hsl(0, 0%, 1%);
  --clr-shade-lighter: hsl(30, 5%, 45%);
  --clr-tint-lighter: hsl(28, 100%, 97%);

  --clr-blue: hsl(252, 66%, 62%);
  --clr-yellow: hsl(28, 89%, 67%);
  --clr-pink: hsl(0, 78%, 79%);
  --clr-red: hsl(7, 77%, 66%);
  --clr-cyan: hsl(172, 46%, 57%);
  --clr-purple: hsl(314, 45%, 23%);
  
  --clr-body: var(--clr-shade-lighter);
  --clr-heading: var(--clr-shade-darker);
  --clr-alt: var(--clr-tint-lighter);

  --clr-card-one: var(--clr-blue);
  --clr-card-two: var(--clr-yellow);
  --clr-card-three: var(--clr-pink);
  --clr-card-four: var(--clr-red);
  --clr-card-five: var(--clr-cyan);
  --clr-card-six: var(--clr-purple);

  --clr-anchor-idle: var(--clr-shade-darker);
  --clr-anchor-hover: var(--clr-blue);
  --clr-anchor-alt-idle: var(--clr-red);
  --clr-anchor-alt-hover: var(--clr-yellow);

  /* Type */
  --font-family: 'Plus Jakarta Sans', sans-serif;
  --fw-body: 400;
  --fw-heading: 700;
  --lh-body: 1.55;
  --lh-heading: 1.25;

  /* @link https://utopia.fyi/type/calculator?c=375,16,1.125,1440,18,1.2,7,2,&s=0.75|0.5|0.25,1.5|2|2.25|4|6|7.5,s-l|xl-2xl|3xl-4xl|3xl-2xl&g=s,l,xl,12 */
  --size-0: clamp(1rem, 0.956rem + 0.1878vi, 1.125rem);
  --size-1: clamp(1.4238rem, 1.2407rem + 0.7815vi, 1.944rem);
  --size-2: clamp(1.802rem, 1.4509rem + 1.4983vi, 2.7994rem);
  --size-3: clamp(2.2807rem, 1.6644rem + 2.6297vi, 4.0311rem);

  --fs-body: var(--size-0);
  --fs-heading-s: var(--size-1);
  --fs-heading-m: var(--size-2);
  --fs-heading-l: var(--size-3);

  /* Determining typescale bounds
     based on wireframes
     for fluid type via utopia.fyi

    Inline:     375px to 1440px (Mobile to Desktop)
    Body:       16px  to 18px (Step 0)
    Ratio:      1.125 to 1.2 (Major Second to Minor Third)

    Heading S:  24px  to 32px -> Step 3 (23px   to 31px)
    Heading M:  26px  to 40px -> Step 5 (29px   to 45px)
    Heading L:  36px  to 56px -> Step 7 (36.5px to 64.5px)
  */

  /* Space */
  /* @link https://utopia.fyi/space/calculator?c=375,16,1.125,1440,18,1.2,7,2,&s=0.75|0.5|0.25,1.5|2|2.25|4|6|7.5,s-l|xl-2xl|3xl-4xl|3xl-2xl&g=s,l,xl,12 */
  --space-3xs: clamp(0.25rem, 0.228rem + 0.0939vi, 0.3125rem);
  --space-2xs: clamp(0.5rem, 0.478rem + 0.0939vi, 0.5625rem);
  --space-xs: clamp(0.75rem, 0.706rem + 0.1878vi, 0.875rem);
  --space-s: clamp(1rem, 0.956rem + 0.1878vi, 1.125rem);
  --space-m: clamp(1.5rem, 1.434rem + 0.2817vi, 1.6875rem);
  --space-l: clamp(2rem, 1.912rem + 0.3756vi, 2.25rem);
  --space-xl: clamp(2.25rem, 2.14rem + 0.4695vi, 2.5625rem);
  --space-2xl: clamp(4rem, 3.8239rem + 0.7512vi, 4.5rem);
  --space-3xl: clamp(6rem, 5.7359rem + 1.1268vi, 6.75rem);
  --space-4xl: clamp(7.5rem, 7.1699rem + 1.4085vi, 8.4375rem);

  /* One-up pairs */
  --space-3xs-2xs: clamp(0.25rem, 0.14rem + 0.4695vi, 0.5625rem);
  --space-2xs-xs: clamp(0.5rem, 0.368rem + 0.5634vi, 0.875rem);
  --space-xs-s: clamp(0.75rem, 0.618rem + 0.5634vi, 1.125rem);
  --space-s-m: clamp(1rem, 0.7579rem + 1.0329vi, 1.6875rem);
  --space-m-l: clamp(1.5rem, 1.2359rem + 1.1268vi, 2.25rem);
  --space-l-xl: clamp(2rem, 1.8019rem + 0.8451vi, 2.5625rem);
  --space-xl-2xl: clamp(2.25rem, 1.4577rem + 3.3803vi, 4.5rem);
  --space-2xl-3xl: clamp(4rem, 3.0317rem + 4.1315vi, 6.75rem);
  --space-3xl-4xl: clamp(6rem, 5.1417rem + 3.662vi, 8.4375rem);

  /* Custom pairs */
  --space-s-l: clamp(1rem, 0.5599rem + 1.8779vi, 2.25rem);
  --space-3xl-2xl: clamp(4.5rem, 6.5282rem + -2.2535vi, 6rem);

  --space-carousel: var(--space-s-l);
  --space-card-gap: var(--space-m);
  --space-nav: var(--space-xl-2xl);
  --space-section: var(--space-3xl-4xl);
  --space-section-inner: var(--space-3xl-2xl);
  
  /* Determining spacing bounds
     based on wireframes
     for fluid space via utopia.fyi

    View:       Mobile   to Desktop
    Carousel:   15px     to 30px (gap between images)
    Card Gap:   24px     to 24px
    Navs:       36px     to 77px (use for hero/cta to section as well)
    Section:    100px    to 136px (use for cards to introduction) 
    Sect-Inner: 100px    to 84px (use for intro to work to CTA)

    S: 1 / M: 1.5 / L: 2 / XL: 2.25 / 2XL: 4 / 3XL: 6 / 4XL: 7.5
    Required custom pairs:
      S   to L
      XL  to 2XL
      3XL to 4XL
      3XL to 2XL
  */

  /* Misc */
  --anchor-border-radius: 1.75rem;
  --anchor-width: 14.25rem; /* TO-DO: scale from 11rem */
  --anchor-height: 3.5rem; /* TO-DO: scale from 2.75rem */

  /* Card section split points are 43.125rem and 69.375rem */
  --card-width-s: 10.25rem;
  --card-height-s: 10.625rem;
  --card-width-m: 22.125rem;
  --card-height-m: 10.625rem;
  --card-width-l: 22.125rem;
  --card-height-l: 22.75rem;

  --bg-img-card-one: url('../assets/pattern-graphic-design.svg');
  --bg-img-card-two: url('../assets/pattern-ui-ux.svg');
  --bg-img-card-three: url('../assets/pattern-apps.svg');
  --bg-img-card-four: url('../assets/pattern-illustrations.svg');
  --bg-img-card-five: url('../assets/pattern-photography.svg');
  --bg-img-card-six: url('../assets/pattern-motion-graphics.svg');

  --wrapper-inline-size: 70rem;
}

/* GLOBAL */
body {
  font-family: var(--font-family);
  font-size: var(--fs-body);
  background-color: var(--clr-tint-lighter);
  line-height: var(--lh-body);
}

article,
header,
footer {
  padding-inline: var(--space-s-l);
}

article {
  padding-block: var(--space-s);
}

header,
footer {
  padding-block: var(--space-xs-s);
}

h1,
h2,
h3,
a,
li {
  font-weight: var(--fw-heading);
  line-height: var(--lh-heading);
}

h1 {
  font-size: var(--fs-heading-l);
}

h2 {
  font-size: var(--fs-heading-m);
  max-inline-size: 18ch;
}

h3 {
  font-size: var(--fs-heading-s);
  display: inline-block;
}

p {
  max-inline-size: 52ch;
}

::selection {
  background-color: var(--clr-anchor-alt-hover);
}

a,
ul {
  color: var(--clr-alt);
}

ul {
  padding-inline-start: 0;
}

a,
a[data-AnchorType='alt'] {
  display: inline-block;

  text-decoration: none;
  text-align: center;
  align-content: center;

  border-radius: var(--anchor-border-radius);
  background-color: var(--clr-anchor-idle);
  inline-size: var(--anchor-width);
  block-size: var(--anchor-height);
}

a:hover {
  background-color: var(--clr-anchor-hover);
}

a[data-AnchorType='alt'] {
  background-color: var(--clr-anchor-alt-idle);
}

a[data-AnchorType='alt']:hover {
  background-color: var(--clr-anchor-alt-hover);
}

[data-containerName='card-list'] {
  margin-block-start: var(--space-2xl);
  padding: 0;
  gap: 1.5rem;
  justify-content: center;
  flex-wrap: wrap;
  max-inline-size: 93rem;
}

[data-containerName='card-list'] > div {
  gap: 1.5rem;
  flex-wrap: wrap;
}

#hero li {
  display: flex;

  list-style: none;
  border-radius: 0.5rem;
  padding: 1.5rem;

  align-items: end;

  background-repeat: no-repeat;
  background-position-x: calc(100% - 1.5rem);
  background-position-y: 1.5rem;
}

li[data-listType='large'] {
  inline-size: var(--card-width-l);
  block-size: var(--card-height-l);
}

li[data-listType='medium'] {
  inline-size: var(--card-width-m);
  block-size: var(--card-height-m);
}

li[data-listType='small'] {
  inline-size: var(--card-width-s);
  block-size: var(--card-height-s);
}

#meet-me img {
  max-block-size: 28rem;
}

/* LAYOUTS */
.flow > * + * {
  margin-block-start: var(--flow-space, 1em);
}

.cluster {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.container {
  container-type: inline-size;
}

.switcher {
  display: flex;
  flex-wrap: wrap;
  gap: var(--space, 1rem);
  --threshold: 45.75rem;
}

.switcher > * {
  flex-grow: 1;
  flex-basis: calc((var(--threshold) - 100%) * 999);
}

.switcher > :last-child {
  padding-inline-start: var(--space-xl-2xl);
}

/* UTILITIES */
.space-between {
  justify-content: space-between;
}

.center-self {
  margin-inline: auto;
}

.center-children > * {
  margin-inline: auto;
}

.center-text {
  text-align: center;
}

.size-wrapper {
  max-inline-size: 70rem;
}

.dark-styling {
  background-color: var(--clr-shade-darker);
  color: var(--clr-tint-lighter);
}

.full-bleed {
  width: 100vw;
  margin-left: 50%;
  transform: translateX(-50%);
}


/* COMPONENTS */
.cta {
  padding-inline: var(--space-s);
}

.cta > div{
  max-inline-size: 70rem;
  border-radius: 0.75rem;
  padding: var(--space-xl-2xl);
}


/* EXCEPTIONS */
/* hero card styling */
.container[data-containerName='card-list'] {
  container-name: card-list;
}

.container[data-containerName='meet-me'] {
  container-name: meet-me;
}

.container[data-containerName='cta'] {
  container-name: cta;
}

#card-group-one {
  max-inline-size: var(--card-width-l);
}

#card-group-two {
  max-inline-size: calc(2 * --card-width-l);
}

#graphic-design {
  background-color: var(--clr-card-one);
  background-image: var(--bg-img-card-one);
}

#ui-ux {
  background-color: var(--clr-card-two);
  background-image: var(--bg-img-card-two);
}

#apps {
  background-color: var(--clr-card-three);
  background-image: var(--bg-img-card-three);
}

#illustrations {
  background-color: var(--clr-card-four);
  background-image: var(--bg-img-card-four);
}

#photography {
  background-color: var(--clr-card-five);
  background-image: var(--bg-img-card-five);
}

#motion-graphics {
  background-color: var(--clr-card-six);
  background-image: var(--bg-img-card-six);
}

#content-slider > ul {
  display: flex;
  gap: var(--space-l);
  overflow-x: scroll;
  scroll-snap-type: inline mandatory;
  padding-inline: 16.875rem;
}

#content-slider li {
  flex-shrink: 0;
  flex-basis: 33.75rem;
  scroll-snap-align: center;
}

#content-slider img {
  block-size: 22.5rem;
  inline-size: 33.75rem;
  border-radius: .75rem;
}

.text-align-query {
  text-align: center;
}

@container card-list (min-inline-size: 93rem) { 
  #card-group-two {
    max-inline-size: var(--card-width-l);
  }
}

@container card-list (max-inline-size: 45.75rem) {
  #card-group-two {
    max-inline-size: var(--card-width-l);
  }

  #illustrations {
    block-size: 9.875rem;
  }
}

@container meet-me (max-inline-size: 49rem) {
  div {
    --flow-space: 1.5em;
    display: flex;
    flex-grow: 0;
    flex-direction: column;
    text-align: center;
    align-items: center;
  }

  .switcher > :last-child {
    padding-inline: var(--space-m);
  }
}

@container cta (max-inline-size: 64.5rem) {
  div {
    --flow-space: 1.5em;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
  }

 
}

